<resources>
    <string name="app_name">TrainingAPP1</string>
    <string name="registration_text_login">Already have an account?</string>
    <string name="login_button_register">Register</string>
    <string name="registration_button_register">Register</string>
    <string name="registration_button_login">Login</string>
    <string name="title_activity_home">Home Activity</string>



    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tab_label1">Contacts</string>
    <string name="tab_label2">Tab2 </string>
    <string name="tab_label3">Tab3 </string>
    <string name="welcome">Welcome</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now !</string>
    <string name="signup_now">SIGNUP Now !</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="save_contact">Save Contact</string>
    <string name="contacts">Contacts</string>
    <string name="language">Language</string>
    <string name="title_contact_det">Contact Details</string>
    <string name="title_create_contac">" New Contact "</string>


</resources>